# non-adversarial-reproduction

./: README.md  generate_ablations.sh  generate_book_reviews.sh  generate_essay_persuade.sh  generate_explainlikeimfive.sh  generate_general_prompts.sh  generate_imdb_reviews.sh  generate_writing_prompts.sh  plots.ipynb  pyproject.toml  template.env
data/: my.bpe
data/baselines/essay_persuade/: blacklist_ids.txt
data/prompts/raw_data/: essay_persuade_additional_prompts.jsonl  general_prompts.json
src/essays/: build_persuade_prompts.py
src/explainlikeimfive/: build_prompts.py  extract_submissions_comments.py
src/imdb/: build_prompts.py
src/memorization_chat_datasets/: lmsys_chat.py  wildchat.py
src/non_adversarial_reproduction/: build_book_reviews_prompts.py  build_general_prompts.py  build_prompt_ablations.py  calculate_perplexities.py  calculate_prompt_overlaps.py  generate.py  map_index_results.py  plot_util.py
src/writing_prompts/: build_prompts.py  extract_submissions_comments.py  models.py
